Initial commit after cleanup

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "pizza-app",
+  "name": "PizzaApp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://huizh11.github.io/App",
+  "homepage": "https://huizh11.github.io/PizzaApp",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
